Update ClassifyConsensusSequences.java
Solving the warning problem when running the java script